# latte_gallery

./: .env  Dockerfile  docker-compose.yaml  initial_accounts.json  openapi.yaml  pyproject.toml  requirements.txt  traefik.yaml
latte_gallery/: main.py  router.py  schemas.py  setup.py
latte_gallery/accounts/: models.py  repository.py  routers.py  schemas.py  services.py
latte_gallery/core/: db.py  dependencies.py  routers.py  schemas.py  settings.py  setup.py
latte_gallery/pictures/: models.py  repositories.py  routers.py  schemas.py  services.py
latte_gallery/security/: dependencies.py  permissions.py
zan 2_demo/latte_gallery-main/: openapi.yaml  pyproject.toml
zan 2_demo/latte_gallery-main/latte_gallery/: main.py
zan 2_demo/latte_gallery-main/latte_gallery/accounts/: routers.py  schemas.py
zan 2_demo/latte_gallery-main/latte_gallery/core/: routers.py  schemas.py  setup.py
